--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express-session": "^1.18.1",
