--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
+    "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2"
   }
 }
