--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
+  "type": "module",
+  
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "discord.js": "^14.19.3",
