--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "type": "module",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
