--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
+    "all": "^0.0.0",
+    "audit": "^0.0.6",
     "bcryptjs": "^3.0.2",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "fund": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2"
   }
